# python-interruptible-threads

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  examples.py  interruptible_threading.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: LICENSE.txt
interruptible_threading/: __init__.py  _version.py  version.py
scripts/: blacken.sh  bump-version.py  deploy.sh
tests/: test_interruptible_threading.py
