[metadata]
name = interruptible-threading
description = Cooperative, prompt thread interruption for CPython (Linux / Darwin)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/python-interruptible-threads
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
py_modules = interruptible_threading
platforms = Linux, MacOS
python_requires = >= 3.9

[options.extras_require]
test =
    black < 24
    isort
    mypy
    pytest
    pytest-cov
    pytest-timeout
    ruff
dev =
    build
    pycln
    twine
    setuptools-git-versioning
    %(test)s

[mypy]
ignore_missing_imports = True
